@@ -613,32 +613,89 @@ parse_expr(pcode_t *pcode)
     return parse_expr_or_expr(pcode);
 }
 
+/*
+ * Parse expression
+ *
+ * size_prefix ::=
+ *              ( "byte" | "word" | "dword" | "qword" )
+ *
+ * prefixed_expr ::=
+ *              ( size_prefix expression | expression )
+ */
+pexpr_t *
+parse_prefixed_expr(pcode_t *pcode)
+{
+    token_t *tok;
+    pexpr_t *pexpr;
+    expr_t *expr;
+    size_prefix_t prefix;
+
+    /* Get the current token */
+    tok = token_queue_cur(pcode->token_queue);
+    if ( tok == NULL ) {
+        return NULL;
+    }
+    /* Parse the size prefix */
+    if ( TOK_KW_BYTE == tok->type ) {
+        prefix = SIZE_PREFIX_BYTE;
+        (void)token_queue_next(pcode->token_queue);
+    } else if ( TOK_KW_WORD == tok->type ) {
+        prefix = SIZE_PREFIX_WORD;
+        (void)token_queue_next(pcode->token_queue);
+    } else if ( TOK_KW_DWORD == tok->type ) {
+        prefix = SIZE_PREFIX_DWORD;
+        (void)token_queue_next(pcode->token_queue);
+    } else if ( TOK_KW_QWORD == tok->type ) {
+        prefix = SIZE_PREFIX_QWORD;
+        (void)token_queue_next(pcode->token_queue);
+    } else {
+        prefix = SIZE_PREFIX_NONE;
+    }
+
+    /* Allocate a prefixed expression */
+    pexpr = malloc(sizeof(pexpr_t));
+    if ( NULL == pexpr ) {
+        return NULL;
+    }
+    /* Parse a following expression */
+    expr = parse_expr(pcode);
+    if ( NULL == expr ) {
+        free(pexpr);
+        return NULL;
+    }
+    /* Set */
+    pexpr->prefix = prefix;
+    pexpr->expr = expr;
+
+    return pexpr;
+}
 
 /*
  * Parse an expr
  *
  * operand_expr ::=
- *              expression
+ *              prefixed_expression
  */
 operand_t *
 parse_operand_expr(pcode_t *pcode)
 {
-    expr_t *expr;
+    pexpr_t *pexpr;
     operand_t *op;
 
-    expr = parse_expr(pcode);
-    if ( NULL == expr ) {
+    /* Parse the prefixed expression */
+    pexpr = parse_prefixed_expr(pcode);
+    if ( NULL == pexpr ) {
         /* Parse error */
         return NULL;
     }
     /* Expression to op_regsym_t */
     op = malloc(sizeof(operand_t));
     if ( NULL == op ) {
-        expr_free(expr);
+        pexpr_free(pexpr);
         return NULL;
     }
     op->type = OPERAND_EXPR;
-    op->op.expr = expr;
+    op->op.pexpr = pexpr;
 
     return op;
 }
@@ -647,21 +704,21 @@ parse_operand_expr(pcode_t *pcode)
  * Parse an addr or moffset
  *
  * operand_addr ::=
- *              "[" expression "]"
+ *              "[" prefixed_expr "]"
  */
 operand_t *
 parse_operand_addr(pcode_t *pcode)
 {
     token_t *tok;
-    expr_t *expr;
+    pexpr_t *pexpr;
     operand_t *op;
 
     /* Skip lbracket */
     (void)token_queue_next(pcode->token_queue);
 
     /* Parse expression */
-    expr = parse_expr(pcode);
-    if ( NULL == expr ) {
+    pexpr = parse_prefixed_expr(pcode);
+    if ( NULL == pexpr ) {
         /* Parse error */
         return NULL;
     }
@@ -677,11 +734,11 @@ parse_operand_addr(pcode_t *pcode)
     /* Expression to addr */
     op = malloc(sizeof(operand_t));
     if ( NULL == op ) {
-        expr_free(expr);
+        pexpr_free(pexpr);
         return NULL;
     }
     op->type = OPERAND_ADDR_EXPR;
-    op->op.expr = expr;
+    op->op.pexpr = pexpr;
 
     return op;
 }
@@ -703,7 +760,9 @@ parse_operand(pcode_t *pcode)
     if ( TOK_BININT == tok->type || TOK_OCTINT == tok->type
          || TOK_DECINT == tok->type || TOK_HEXINT == tok->type
          || TOK_OP_PLUS == tok->type || TOK_OP_MINUS == tok->type
-         || TOK_OP_TILDE == tok->type || TOK_SYMBOL == tok->type ) {
+         || TOK_OP_TILDE == tok->type || TOK_SYMBOL == tok->type
+         || TOK_KW_BYTE == tok->type || TOK_KW_WORD == tok->type
+         || TOK_KW_DWORD == tok->type || TOK_KW_QWORD == tok->type ) {
         /* Symbol, register, or immediate value */
         op = parse_operand_expr(pcode);
     } else if ( TOK_LBRACKET == tok->type ) {
@@ -734,7 +793,6 @@ parse_instr(pcode_t *pcode, const char *sym)
     operand_vector_t *vec;
 
     vec = mvector_new();
-
     /* Read until the end of line */
     tok = token_queue_cur(pcode->token_queue);
     while ( NULL != tok && TOK_EOL != tok->type ) {
